--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "logs": "pm2 logs crypto-bot-surfer --lines 100",
     "logs:clear": "pm2 flush crypto-bot-surfer",
     "restart": "npm stop && npm start && npm run logs",
-    "start": "pm2 start node --name crypto-bot-surfer --attach --log-date-format=\"YYYY-MM-DD HH:mm Z\" -- -r dotenv/config ./server/bot.js",
+    "start": "pm2 start ecosystem.config.cjs",
     "nodemon": "nodemon -- -r  dotenv/config ./server/bot.js",
     "node": "node --inspect -r dotenv/config ./server/bot.js",
-    "start-logs": "pm2 start node --name crypto-bot-surfer --attach --log-date-format=\"YYYY-MM-DD HH:mm Z\" --raw -- -r dotenv/config ./server/bot.js",
     "stop": "pm2 delete crypto-bot-surfer",
     "upgrade": "npm run upgrade:git && npm install",
     "upgrade:git": "git reset --hard HEAD && git pull"
