--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "restart": "npm stop && npm start && npm run logs",
     "start": "pm2 start ecosystem.config.cjs",
     "nodemon": "nodemon -- -r  dotenv/config ./server/bot.js",
-    "node": "node --inspect -r dotenv/config ./server/bot.js",
+    "inspect": "node --inspect -r dotenv/config ./server/bot.js",
+    "node": "node --trace-warnings -r dotenv/config ./server/bot.js",
     "stop": "pm2 delete crypto-bot-surfer",
     "upgrade": "npm run upgrade:git && npm install",
     "upgrade:git": "git reset --hard HEAD && git pull"
@@ -30,7 +31,8 @@
   "eslintConfig": {
     "root": true,
     "env": {
-      "node": true
+      "node": true,
+      "es6": true
     },
     "extends": [
       "eslint:recommended"
