--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "chartjs-node-canvas": "^3.1.0",
     "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
+    "fast-csv": "^4.3.6",
     "node-binance-api": "^0.13.0",
     "telegraf": "^4.1.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.3.1"
+    "eslint-plugin-prettier": "^3.3.1",
+    "nodemon": "^2.0.20"
   },
   "eslintConfig": {
     "root": true,
