--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "stop": "pm2 delete crypto-bot-surfer",
     "upgrade": "npm run upgrade:git && npm install",
     "upgrade:git": "git reset --hard HEAD && git pull",
-    "test:api": "node --inspect -r dotenv/config test-api.js"
+    "test:api": "node -r dotenv/config test-api.js"
   },
   "dependencies": {
     "chart.js": "^2.9.4",
