--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "amqplib": "^0.10.3",
+    "axios": "^1.3.4",
     "chart.js": "^2.9.4",
     "chartjs-node-canvas": "^3.1.0",
     "core-js": "^3.6.5",
