--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "nodemon": "nodemon -- -r  dotenv/config ./server/bot.js",
     "inspect": "node --inspect -r dotenv/config ./server/bot.js",
     "node": "node --trace-warnings -r dotenv/config ./server/bot.js",
+    "report": "node ./server/bot.js",
     "stop": "pm2 delete crypto-bot-surfer",
     "upgrade": "npm run upgrade:git && npm install",
     "upgrade:git": "git reset --hard HEAD && git pull",
