--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^8.2.0",
     "fast-csv": "^4.3.6",
     "node-binance-api": "^0.13.0",
+    "node-fetch": "^3.3.1",
     "telegraf": "^4.1.1"
   },
   "devDependencies": {
